JAVA_OPTIONS is different between v8 and v11 (v9 and higher)